[package]
name = "cellular"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.26"
vulkano = "0.30"
vulkano-win = "0.30"
vulkano-shaders = "0.30"
rand = "0.8.5"
rand_distr = "0.4.3"
num = "0.4"
