[package]
name = "cellular"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
vulkano = "0.31"
vulkano-win = "0.31"
vulkano-shaders = "0.31"
rand = "0.8.5"
rand_distr = "0.4.3"
num = "0.4"
bytemuck = "^1.7"
colored = "2.0"
itertools = "0.10"
# it may be necessary to adjust this with nokhwa version
image = "0.23"

[dependencies.nokhwa]
version = "0.9"
features = ["input-v4l", "input-msmf"]
